minor changes in conclusion

--- a/report.tex
+++ b/report.tex
@@ -206,7 +206,7 @@ Figure \ref{fig:fitness_results} shows the results for the overall fitness costs
 % the proposed solution? You may organize ideas using lists or numbered points,
 % if appropriate, but avoid making your report into a check-list or a series of
 % encrypted notes 
-Our results show that if we consider the overall fitness function, then tabu search provides solutions that are more fit. This means that when the tabu search algorithm is run on the data set, it produces solutions that are on average, more compact, equal in population and contiguous than what hill climbing, simulated annealing and particle swarm optimization would produce. Looking at compactness results from each algorithm, we observe that particle swarm optimization provides better solutions compared to hill climbing, tabu search. Meanwhile, simulated annealing produces large fitness values which are not ideal compared to the other algorithms. Comparing the population equality results we see that simulated annealing does significantly compared to the other algorithms and tabu search did relatively well.
+Our results show that tabu search provides solutions that have the best overall fitness (the least cost) in comparison to the other algorithms we tested. This means that when the tabu search algorithm is run on the data set, it produces solutions that are generally more compact and equal in population than what hill climbing, simulated annealing and particle swarm optimization would produce. Looking at the compactness results from each algorithm, we observe that on average, particle swarm optimization provides better solutions compared to hill climbing, tabu search. Meanwhile, simulated annealing produces large fitness values which are not ideal compared to the other algorithms. Comparing the population equality results we see that simulated annealing again does significantly worse compared to the other algorithms and tabu search did relatively well.
 
 As a result of our experiments and observations of results, it is recommended that further research and parameter tuning effort should be put towards the tabu search algorithm. Tabu search performed the best on average and relatively well when considering each evaluation criteria for political districting. A second recommendation would also be to further research particle swarm optimization methods applied to the political districting problem. Particle swarm optimization performed the second best after observing the results of the overall fitness function.
 
